--- a/vocab_extractor/pyproject.toml
+++ b/vocab_extractor/pyproject.toml
@@ -2,7 +2,7 @@
 name = "vocab-extractor"
 version = "0.1.0"
 description = ""
-authors = ["David J Nevin <66497218+davidjnevin@users.noreply.github.com>"]
+authors = ["David J Nevin <dnevincodes@gmail.com>"]
 readme = "README.md"
 packages = [{include = "vocab_extractor"}]
 
