--- a/vocab_extractor/pyproject.toml
+++ b/vocab_extractor/pyproject.toml
@@ -8,7 +8,13 @@ packages = [{include = "vocab_extractor"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+textract = "^1.6.5"
+python-docx = "^0.8.11"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.3.1"
+python-docx = "^0.8.11"
 
 [build-system]
 requires = ["poetry-core"]
