--- a/vocab_extractor/pyproject.toml
+++ b/vocab_extractor/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "vocab_extractor"}]
 python = "^3.11"
 textract = "^1.6.5"
 python-docx = "^0.8.11"
+nltk = "^3.8.1"
 
 
 [tool.poetry.group.dev.dependencies]
